Update hero badge: Change 'Built on Berachain Mainnet' to 'Built on Berachain'

--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
     <!-- Hero Section -->
     <section class="hero" id="main-content" role="main">
         <div class="hero-content">
-            <div class="hero-badge" data-i18n="hero.badge">🚀 Built on Berachain Mainnet</div>
+            <div class="hero-badge" data-i18n="hero.badge">🚀 Built on Berachain</div>
             <h1 data-i18n="hero.title">Debear Party</h1>
             <p data-i18n="hero.description">Innovative Web3.0 Comprehensive Platform - DeFi, GameFi, and Trendy Collectibles Await Your Discovery</p>
             <div class="cta-buttons">
