--- a/whitepaper.html
+++ b/whitepaper.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="js/disable-console.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debear Party 白皮书 v1.0 - 潮流元宇宙游戏平台</title>
