--- a/swap.html
+++ b/swap.html
@@ -1099,7 +1099,7 @@
     <!-- 主内容 -->
     <div class="container">
         <div class="page-title">
-            <h1>💱 Swap</h1>
+            <h1>Swap</h1>
         </div>
 
         <div class="swap-layout">
